<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    app:showAsAction="always"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_margin="10dp"
        android:id="@+id/relative_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:padding="10dp">

            <TextView
                style="@style/Theme.AppCompat.DayNight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="@string/what_do_you_want_to_calculate"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_bmi"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/light_orange"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="10dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/_0177" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="monospace"
                    android:text="@string/body_mass_index"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/carView_bmr"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:layout_below="@id/cardView_bmi"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/light_orange"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:cardMaxElevation="12dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/_105_i402_029_s_m004_c13_ketogenic_diet_flat_composition_1_" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="monospace"
                    android:text="@string/basal_metabolic_rate"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />

            </androidx.cardview.widget.CardView>


            <TextView
                style="@style/Theme.AppCompat.DayNight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/carView_bmr"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="150dp"
                android:fontFamily="monospace"
                android:padding="30dp"
                android:text="@string/by_aiham"
                android:textSize="20sp" />
        </RelativeLayout>

    </LinearLayout>


</ScrollView>


